--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+preload-logger (0.9-0ubuntu1) vivid; urgency=medium
+
+  * Fixed a bug in the forbidden logging code
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 06 Jun 2015 17:09:42 +0100
+
 preload-logger (0.9-0ubuntu0) vivid; urgency=medium
 
   * Adding checks for files that forbid logging
