--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+preload-logger (0.10-0ubuntu0) UNRELEASED; urgency=medium
+
+  * Now using a more compact logging format
+  * Now using zlib to create compresssed logs
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Wed, 24 Jun 2015 12:29:30 +0100
+
 preload-logger (0.9-0ubuntu1) vivid; urgency=medium
 
   * Fixed a bug in the forbidden logging code
