Fixing changelog typo
original bzr status:
revno: 21
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: PreloadLogger
timestamp: Wed 2015-06-24 12:35:18 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-preload-logger (0.10-0ubuntu0) UNRELEASED; urgency=medium
+preload-logger (0.10-0ubuntu0) vivid; urgency=medium
 
   * Now using a more compact logging format
   * Now using zlib to create compresssed logs
