--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+preload-logger (0.11-0ubuntu0) vivid; urgency=medium
+
+  * Modifying zlib symbols to avoid issues with programs that internally use zlib
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Thu, 02 Jul 2015 13:20:46 +0100
+
 preload-logger (0.10-0ubuntu0) vivid; urgency=medium
 
   * Now using a more compact logging format
