--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 preload-logger (0.11-0ubuntu0) vivid; urgency=medium
 
+  * Preserving errno
   * Modifying zlib symbols to avoid issues with programs that internally use zlib
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Thu, 02 Jul 2015 13:20:46 +0100
