--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-preload-logger (0.12) trusty; urgency=medium
+preload-logger (0.12-1) vivid; urgency=medium
 
-  * Version bump
+  * Adding postinst/rm scripts
 
- -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Mon, 27 Jul 2015 21:27:38 +0100
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Mon, 27 Jul 2015 22:04:02 +0100
 
 preload-logger (0.11-0ubuntu2) trusty; urgency=medium
 
