--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+preload-logger (0.14-1) vivid; urgency=medium
+
+  * Fixing erroneous va_end in one of the FS functions
+  * Attempting some extra targets for package install
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 05 Sep 2015 15:56:26 +0100
+
 preload-logger (0.12-1) vivid; urgency=medium
 
   * Adding postinst/rm scripts
