--- a/debian/changelog
+++ b/debian/changelog
@@ -1,61 +1,68 @@
-preload-logger (0.16-1) vivid; urgency=medium
+libpreload-logger (0.18) vivid; urgency=medium
+
+  * Fixing control file to indicate presence of a dev package
+  * Renaming source package to libpreload-logger
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 05 Sep 2015 17:11:42 +0100
+
+libpreload-logger (0.16-1) vivid; urgency=medium
 
   * New approach to symlinking in Makefile
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 05 Sep 2015 16:14:45 +0100
 
-preload-logger (0.14-1) vivid; urgency=medium
+libpreload-logger (0.14-1) vivid; urgency=medium
 
   * Fixing erroneous va_end in one of the FS functions
   * Attempting some extra targets for package install
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 05 Sep 2015 15:56:26 +0100
 
-preload-logger (0.12-1) vivid; urgency=medium
+libpreload-logger (0.12-1) vivid; urgency=medium
 
   * Adding postinst/rm scripts
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Mon, 27 Jul 2015 22:04:02 +0100
 
-preload-logger (0.11-0ubuntu2) trusty; urgency=medium
+libpreload-logger (0.11-0ubuntu2) trusty; urgency=medium
 
   * Adding postinst and postrm scripts
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Mon, 27 Jul 2015 21:07:35 +0100
 
-preload-logger (0.11-0ubuntu1) trusty; urgency=medium
+libpreload-logger (0.11-0ubuntu1) trusty; urgency=medium
 
   * Preserving errno
   * Modifying zlib symbols to avoid issues with programs that internally use zlib
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Thu, 02 Jul 2015 13:20:46 +0100
 
-preload-logger (0.10-0ubuntu0) trusty; urgency=medium
+libpreload-logger (0.10-0ubuntu0) trusty; urgency=medium
 
   * Now using a more compact logging format
   * Now using zlib to create compresssed logs
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Wed, 24 Jun 2015 12:29:30 +0100
 
-preload-logger (0.9-0ubuntu1) trusty; urgency=medium
+libpreload-logger (0.9-0ubuntu1) trusty; urgency=medium
 
   * Fixed a bug in the forbidden logging code
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 06 Jun 2015 17:09:42 +0100
 
-preload-logger (0.9-0ubuntu0) trusty; urgency=medium
+libpreload-logger (0.9-0ubuntu0) trusty; urgency=medium
 
   * Adding checks for files that forbid logging
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sat, 06 Jun 2015 16:51:05 +0100
 
-preload-logger (0.8-1ubuntu1) trusty; urgency=medium
+libpreload-logger (0.8-1ubuntu1) trusty; urgency=medium
 
   * Initial Ubuntu package
 
  -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Fri, 05 Jun 2015 23:16:45 +0100
 
-preload-logger (0.8-1) trusty; urgency=low
+libpreload-logger (0.8-1) trusty; urgency=low
 
   * Initial release
 
