--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,4 @@
 src/libPreloadLogger.so usr/lib/libPreloadLogger.so
 src/libPreloadLogger.so.0 usr/lib/libPreloadLogger.so.0
 src/libPreloadLogger.so.0.9 usr/lib/libPreloadLogger.so.0.9
+data/chromium-browser usr/local/bin/chromium-browser
