--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpreload-logger (0.21) trusty; urgency=medium
+
+  * Missing install rule on the binary lib package for the chromium script
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Wed, 07 Oct 2015 14:49:05 +0100
+
 libpreload-logger (0.20) vivid; urgency=medium
 
   * Fixing test.c
