reorganized the items in the dayparts
original bzr status:
revno: 54
committer: Seif Lotfy <seif@lotfy.com>
branch nick: gnome-activity-journal
timestamp: Tue 2010-01-05 19:19:13 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libpreload-logger (0.23) trusty; urgency=medium
+libpreload-logger (0.24) vivid; urgency=medium
 
   * Fixing a missing dir for the binary package
   * Fixing permissions on chromium-browser script
