switch datebar if older than a week
original bzr status:
revno: 55
committer: Seif Lotfy <seif@lotfy.com>
branch nick: gnome-activity-journal
timestamp: Tue 2010-01-05 19:32:42 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpreload-logger (0.25) trusty; urgency=medium
+
+  * Trying to remove some sanity checks from the LP builder...
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Wed, 07 Oct 2015 22:14:20 +0100
+
 libpreload-logger (0.24) vivid; urgency=medium
 
   * Fixing a missing dir for the binary package
