--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libpreload-logger (0.27) trusty; urgency=medium
+libpreload-logger (0.28) vivid; urgency=medium
 
   * Trying to remove some sanity checks from the LP builder...
 
