Removing glibc dep as the glibc package is actually libc6...
original bzr status:
revno: 45
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: preload-logger
timestamp: Fri 2015-10-09 14:35:24 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpreload-logger (0.29) trusty; urgency=medium
+
+  * Removing glibc dep as the glibc package is actually libc6...
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Fri, 09 Oct 2015 14:33:48 +0100
+
 libpreload-logger (0.28) vivid; urgency=medium
 
   * Trying to remove some sanity checks from the LP builder...
