--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpreload-logger (0.31) trusty; urgency=medium
+
+  * Removing references to libc malloc that were accidentally added
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sun, 11 Oct 2015 15:18:26 +0100
+
 libpreload-logger (0.30) vivid; urgency=medium
 
   * Removing glibc dep as the glibc package is actually libc6...
