Now logging the cmdline parameters of launched apps
original bzr status:
revno: 49
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: preload-logger
timestamp: Tue 2015-10-13 16:43:33 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpreload-logger (0.33) trusty; urgency=medium
+
+  * Now logging the cmdline parameters of launched apps
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Tue, 13 Oct 2015 16:43:06 +0100
+
 libpreload-logger (0.32) vivid; urgency=medium
 
   * Removing references to libc malloc that were accidentally added
