Fixing make install rules
original bzr status:
revno: 51
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: preload-logger
timestamp: Fri 2015-10-30 14:55:51 +0000

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpreload-logger (0.35) trusty; urgency=medium
+
+  * Fixing make install rules
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Fri, 30 Oct 2015 14:55:34 +0000
+
 libpreload-logger (0.34) vivid; urgency=medium
 
   * Now logging the cmdline parameters of launched apps
